align fix in vacancy

--- a/founder.html
+++ b/founder.html
@@ -152,8 +152,8 @@
             </div>
             <!-- Feature boxes -->
             <div class="feature-boxes row justify-content-center">
-                <div class="col-lg-8 col-10 col-tiny-12" style="margin-top:10%">
-                    <iframe src="https://www.youtube.com/embed/DAZsdFg1TqM?autoplay=0&mute=1" width="700" height="450" frameborder="0" allowfullscreen></iframe>
+                <div class="col-lg-8 col-10 col-tiny-12 embed-responsive embed-responsive-21by9" style="margin-top:10%">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/DAZsdFg1TqM?autoplay=0&mute=1" width="700" height="450" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-4 col-10 col-tiny-12">
                     <div class="skill-text">
@@ -161,43 +161,25 @@
                             <!--<span class="title-tag"><i class="fa fa-quote-right"></i></span>-->
                         </div>
                         <p style="text-align:left">
-                         <!--   Software Architects<br />
-                            Solutions Architects<br />
-                            .Net Developers<br />
-                            Java Developers<br />
-                            AngularJS Developers<br />
-                            Python Developers<br />
-                            Android & IOS Mobile Developers<br />
-                            Cloud/DevOps Engineers<br />
-                            Business Intelligence Developers<br />
-                            Robotics Process Automation(RPA) analysts<br />
-                            RPA Developers<br />
-                            Test Analysts<br />
-                            Automation Testers<br />
-                            Artificial Intelligence experts<br />
-                            Business Analysts<br />
-                            Scrum Master<br /> -->
-
-                             <ul class="about-list">
-                            <li> <i class="far fa-check"></i> Software Architects</li>
-                           <li> <i class="far fa-check"></i> Solutions Architects</li>
-                           <li> <i class="far fa-check"></i> .Net Developers</li>
-                           <li> <i class="far fa-check"></i> Java Developers</li>
-                           <li> <i class="far fa-check"></i> AngularJS Developers</li>
-                           <li> <i class="far fa-check"></i> Python Developers</li>
-                           <li> <i class="far fa-check"></i> Android & IOS Mobile Developers</li>
-                           <li> <i class="far fa-check"></i> Cloud/DevOps Engineers</li>
-                           <li> <i class="far fa-check"></i> Business Intelligence Developers</li>
-                            <li> <i class="far fa-check"></i> RPA analysts</li>
-                            <li> <i class="far fa-check"></i> RPA Developers</li>
-                             <li> <i class="far fa-check"></i> Big Data Sepcialists</li>
-                            <li> <i class="far fa-check"></i> Test Analysts</li>
-                            <li> <i class="far fa-check"></i> Automation Testers</li>
-                            <li> <i class="far fa-check"></i> Artificial Intelligence experts</li>
-                            <li> <i class="far fa-check"></i> Business Analysts</li>
-                            <li> <i class="far fa-check"></i> Scrum Masters</li>
-
-                        </ul>
+                            <ul class="about-list">
+                                <li> <i class="far fa-check"></i> Software Architects</li>
+                                <li> <i class="far fa-check"></i> Solutions Architects</li>
+                                <li> <i class="far fa-check"></i> .Net Developers</li>
+                                <li> <i class="far fa-check"></i> Java Developers</li>
+                                <li> <i class="far fa-check"></i> AngularJS Developers</li>
+                                <li> <i class="far fa-check"></i> Python Developers</li>
+                                <li> <i class="far fa-check"></i> Android & IOS Mobile Developers</li>
+                                <li> <i class="far fa-check"></i> Cloud/DevOps Engineers</li>
+                                <li> <i class="far fa-check"></i> Business Intelligence Developers</li>
+                                <li> <i class="far fa-check"></i> RPA analysts</li>
+                                <li> <i class="far fa-check"></i> RPA Developers</li>
+                                <li> <i class="far fa-check"></i> Big Data Sepcialists</li>
+                                <li> <i class="far fa-check"></i> Test Analysts</li>
+                                <li> <i class="far fa-check"></i> Automation Testers</li>
+                                <li> <i class="far fa-check"></i> Artificial Intelligence experts</li>
+                                <li> <i class="far fa-check"></i> Business Analysts</li>
+                                <li> <i class="far fa-check"></i> Scrum Masters</li>
+                            </ul>
                         </p>
                     </div>
                 </div>
