Google Analystics added

--- a/solutions.html
+++ b/solutions.html
@@ -29,6 +29,15 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <script type=”text/javascript” src=”//cdn.jsdelivr.net/afterglow/latest/afterglow.min.js”></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W5QX377CGD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W5QX377CGD');
+</script>
 </head>
 
 <body>
@@ -501,7 +510,7 @@
                                 <li>
                                     <a href="tel:+0123456789">
                                         <i class="far fa-phone"></i>
-                                        +27-(0)11-202-5135
+                                        +27-(0)10-312-5980
                                     </a>
                                 </li>
                                 <li>
